# fastapi-like-laravel

./: .env.example  .gitignore  pyproject.toml
app/: main.py
app/config/: database.py
app/controllers/: user_controller.py
app/models/: user.py
app/requests/: user_request.py
app/routes/: api.py
app/services/: user_service.py
tests/: test_users.py
